# deconvolution

./: .gitignore  CMakeLists.txt  LICENSE  README.md  to-do.txt
data/: 100075.pgm
example/: CMakeLists.txt  convolve.cpp  convolve.hpp  image-deconvolve.cpp  psnr-main.cpp  psnr.cpp  psnr.hpp
include/: deconvolve.hpp  regularizer.hpp
matlab/: CMakeLists.txt  MEDI_Dual.m  deconvolveDual.cpp
medi/: MEDI_DF.m  MEDI_L1.m  QSM_IRLS.m  QSM_IRLS_new.m  cgsolve.m  flatten.m  wcgsolve.m
src/: admm.hpp  array-util.hpp  ceres.cpp  ceres.hpp  common.hpp  convex-fn.hpp  deconvolve-bp.cpp  deconvolve-bp.hpp  deconvolve.cpp  least-sq.cpp  least-sq.hpp  optimal-grad.cpp  optimal-grad.hpp  primal.cpp  project-simplex.cpp  project-simplex.hpp  quadratic-min.cpp  quadratic-min.hpp  regularizer.cpp  transport.cpp  transport.hpp  union-find.hpp  util.hpp
src/alglib/: ap.cpp  ap.h
src/iml/: cg.h
test/: CMakeLists.txt  test-admm.cpp  test-convex-fn.cpp  test-deconvolve-bp.cpp  test-main.cpp  test-project-simplex.cpp  test-regularizer.cpp  test-transport.cpp
